# sony_cam_ros_noetic

./: CMakeLists.txt  README.md  package.xml
src/: nvcam.cpp  nvcam.h  photo_talker.cpp
src_for_build/libgphoto2/: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  gphoto2-config  libgphoto2-uninstalled.pc  libgphoto2.pc  libtool
src_for_build/libgphoto2/autom4te.cache/: output.1  requests  traces.0  traces.1
src_for_build/libgphoto2/camlibs/: Makefile  Makefile.in  all-mkf-camlibs  ax203.la  canon.la  digigr8.la  dimagev.la  directory.la  jl2005a.la  jl2005c.la  kodak_dc240.la  lumix.la  mars.la  pentax.la  ptp2.la  ricoh_g3.la  sierra.la  sonix.la  sq905.la  st2205.la  template.la  topfield.la  tp6801.la
src_for_build/libgphoto2/gphoto-m4/: Makefile  Makefile.in
src_for_build/libgphoto2/libgphoto2/: Makefile  Makefile.in  libgphoto2.la
src_for_build/libgphoto2/libgphoto2_port/: Makefile  Makefile.in  aclocal.m4  config.h  config.status  configure  disk.la  libgphoto2_port-uninstalled.pc  libtool  ptpip.la  serial.la  usb1.la  usbdiskdirect.la  usbscsi.la
src_for_build/libgphoto2/packaging/: Makefile  Makefile.in
src_for_build/libgphoto2/po/: Makefile  Makefile.in  cs.po  da.gmo  da.po  de.gmo  de.po  es.gmo  es.po  eu.po  fr.gmo  fr.po  hu.po  it.gmo  it.po  ja.gmo  ja.po  libgphoto2-6.pot  nl.gmo  nl.po  pl.gmo  pl.po  ru.po  sv.gmo  sv.po  uk.gmo  uk.po  vi.gmo  vi.po  zh_CN.po
src_for_build/libgphoto2/tests/: Makefile  Makefile.in  print-libgphoto2-version  test-filesys  (+1 more)
(+205 files in other folders)
